--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "budget-tracker-server",
+  "name": "expense-tracker-server",
   "version": "1.0.0",
-  "description": "server for the budget tracker app",
+  "description": "server for the expense tracker app",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "MONGODB_URI=mongodb://localhost/budget-tracker-test mocha",
-    "test:debug": "MONGODB_URI=mongodb://localhost/budget-tracker-test mocha --debug-brk",
-    "test:watch": "MONGODB_URI=mongodb://localhost/budget-tracker-test nodemon --exec mocha"
+    "test": "MONGODB_URI=mongodb://localhost/expense-tracker-test mocha",
+    "test:debug": "MONGODB_URI=mongodb://localhost/expense-tracker-test mocha --debug-brk",
+    "test:watch": "MONGODB_URI=mongodb://localhost/expense-tracker-test nodemon --exec mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ABodey/budgetTrackerServer.git"
+    "url": "git+https://github.com/ABodey/expenseTrackerServer.git"
   },
   "author": "Andrew <A.s.bodey@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ABodey/budgetTrackerServer/issues"
+    "url": "https://github.com/ABodey/expenseTrackerServer/issues"
   },
-  "homepage": "https://github.com/ABodey/budgetTrackerServer#readme",
+  "homepage": "https://github.com/ABodey/expenseTrackerServer#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
