--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/ABodey/budgetTrackerServer#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "jsonwebtoken-promisified": "^1.0.3",
     "mongoose": "^4.13.5",
     "morgan": "^1.9.0"
   },
